--- a/sanjeev-test/lora-ft-e1.ipynb
+++ b/sanjeev-test/lora-ft-e1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "130f6e8a",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "c6e32120",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
     "BENCHAMARK_GLUE=\"glue\"\n",
     "GLUE_DATASET_TASK_SC = \"sst2\"  # SST-2 for sentiment classification\n",
     "\n",
-    "DATASET_SIZE = 100 # or 'full'\n",
+    "DATASET_SIZE = 50 # or 'full'\n",
     "RUN_ABLATIONS = False  # Toggle to enable/disable ablation study (modular flag)\n",
     "\n",
     "RANDOM_SEED = 42\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "912a3535",
    "metadata": {},
    "outputs": [
@@ -103,11 +103,9 @@
       "============================================================\n",
       "PEFT COMPARISON - T5-small\n",
       "============================================================\n",
-      "Dataset size: 100\n",
+      "Dataset size: 50\n",
       "Model: t5-small\n",
       "Methods: LoRA, Prefix-Tuning, Prompt-Tuning, Full FT\n",
-      "Ablations Enabled: Including ablated variants for study\n",
-      "Note: For LoRA ablation, using lora_alpha=0 to nullify adapter effect\n",
       "============================================================\n",
       "\n"
      ]
@@ -130,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "3620aa06",
    "metadata": {},
    "outputs": [],
@@ -160,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "id": "3f44a598",
    "metadata": {},
    "outputs": [],
@@ -254,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "id": "11d45b47",
    "metadata": {},
    "outputs": [
@@ -262,25 +260,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading datasets\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Generating train split: 100%|██████████| 67349/67349 [00:00<00:00, 559669.88 examples/s]\n",
-      "Generating validation split: 100%|██████████| 872/872 [00:00<00:00, 134707.12 examples/s]\n",
-      "Generating test split: 100%|██████████| 1821/1821 [00:00<00:00, 238644.82 examples/s]\n",
-      "Generating train split: 14731 examples [00:00, 60523.11 examples/s]\n",
-      "Generating validation split: 818 examples [00:00, 51067.06 examples/s]\n",
-      "Generating test split: 819 examples [00:00, 39135.69 examples/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Loading datasets\n",
       "Datasets loaded\n",
       "\n"
      ]
@@ -312,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "3d4fd534",
    "metadata": {},
    "outputs": [
@@ -362,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "973e8594",
    "metadata": {},
    "outputs": [
@@ -400,8 +380,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map: 100%|██████████| 25/25 [00:00<00:00, 4366.34 examples/s]\n",
-      "Map: 100%|██████████| 25/25 [00:00<00:00, 1874.77 examples/s]"
+      "Map: 100%|██████████| 50/50 [00:00<00:00, 2438.32 examples/s]\n",
+      "Map: 100%|██████████| 12/12 [00:00<00:00, 1254.78 examples/s]\n",
+      "Map: 100%|██████████| 12/12 [00:00<00:00, 1333.29 examples/s]\n",
+      "Map: 100%|██████████| 50/50 [00:00<00:00, 1376.30 examples/s]\n",
+      "Map: 100%|██████████| 12/12 [00:00<00:00, 937.29 examples/s]\n",
+      "Map: 100%|██████████| 12/12 [00:00<00:00, 923.06 examples/s]"
      ]
     },
     {
@@ -522,20 +506,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "f9c51916",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading builder script: 4.20kB [00:00, ?B/s]\n",
-      "Downloading builder script: 6.79kB [00:00, 19.4kB/s]\n",
-      "Downloading builder script: 6.27kB [00:00, ?B/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load metrics\n",
     "accuracy_metric = evaluate.load(\"accuracy\")\n",
@@ -554,6 +528,10 @@
     "        \n",
     "        # Replace -100 in labels with pad_token_id\n",
     "        labels = np.where(labels != -100, labels, tokenizer.pad_token_id)\n",
+    "\n",
+    "        # Validate predictions and labels for negative values\n",
+    "        if np.any(predictions < 0) or np.any(labels < 0):\n",
+    "            raise ValueError(\"Found negative values in predictions or labels\")\n",
     "        \n",
     "        # Decode the predictions and labels\n",
     "        decoded_preds = tokenizer.batch_decode(predictions, skip_special_tokens=True)\n",
@@ -590,6 +568,10 @@
     "        # Replace -100 in predictions/labels with pad_token_id\n",
     "        predictions = np.where(predictions != -100, predictions, tokenizer.pad_token_id)\n",
     "        labels = np.where(labels != -100, labels, tokenizer.pad_token_id)\n",
+    "\n",
+    "        # Validate predictions and labels for negative values\n",
+    "        if np.any(predictions < 0) or np.any(labels < 0):\n",
+    "            raise ValueError(\"Found negative values in predictions or labels\")\n",
     "        \n",
     "        # Decode the predictions and labels\n",
     "        decoded_preds = tokenizer.batch_decode(predictions, skip_special_tokens=True)\n",
@@ -616,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "1da2cd92",
    "metadata": {},
    "outputs": [],
@@ -633,6 +615,7 @@
     "    else:\n",
     "        epochs, batch, eval_steps = 3, 8, 100\n",
     "\n",
+    "    ## TOD: Check Kaggle\n",
     "    use_bf16 = torch.cuda.is_available() and torch.cuda.is_bf16_supported()\n",
     "    use_fp16 = False  # Disabled to avoid NaN losses\n",
     "    load_best = method_name == \"full_ft\" or \"lora\" in method_name\n",
@@ -682,7 +665,7 @@
     "results = {}\n",
     "os.makedirs(\"./results\", exist_ok=True)\n",
     "os.makedirs(\"./models\", exist_ok=True)\n",
-    "os.makedirs(\"./plots\", exist_ok=True) # For curves\n",
+    "os.makedirs(\"./plots\", exist_ok=True) \n",
     "\n",
     "for method_name in methods_to_run:\n",
     "    for task_name, (dataset, compute_metrics) in tasks.items():\n",
@@ -817,7 +800,7 @@
     "            save_path = f\"./models/{task_name}/{method_name}\"\n",
     "            os.makedirs(save_path, exist_ok=True)\n",
     "            trainer.save_model(save_path)\n",
-    "            print(f\"✓ Completed and saved to {save_path}\\n\")\n",
+    "            print(f\"Completed and saved to {save_path}\\n\")\n",
     "            del model, trainer\n",
     "            safe_cleanup()\n",
     "        except Exception as e:\n",
@@ -960,6 +943,18 @@
     "                        print(f\"- Ablation in {method.upper()} on {task.capitalize()} leads to {impact} in performance (delta: {key_delta:.4f}).\")\n",
     "        \n",
     "        print(f\"View plots in ./plots/ for detailed curves (loss/metric vs step) and comparisons.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "098a5345",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"\\n\" + \"=\"*60)\n",
+    "print(\"SUCCESS - All 4 PEFT methods completed!\" + (\" With ablations!\" if RUN_ABLATIONS else \"\"))\n",
+    "print(\"=\"*60)"
    ]
   }
  ],
