--- a/sanjeev-test/lora-ft-e1.ipynb
+++ b/sanjeev-test/lora-ft-e1.ipynb
@@ -2,11 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "130f6e8a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "############## Working Version. Use Python 3.12.10 ##############\n",
+    "#Create a venv using python3.12 -m venv .venv\n",
+    "#Activate the venv using source .venv/bin/activate\n",
+    "#Install dependencies using pip install -r requirements.txt\n",
+    "#################################################################\n",
     "\n",
     "import os\n",
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
@@ -45,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "c6e32120",
    "metadata": {},
    "outputs": [
@@ -79,7 +84,7 @@
     "BENCHAMARK_GLUE=\"glue\"\n",
     "GLUE_DATASET_TASK_SC = \"sst2\"  # SST-2 for sentiment classification\n",
     "\n",
-    "DATASET_SIZE = 50 # or 'full'\n",
+    "DATASET_SIZE = 100 # or 'full'\n",
     "RUN_ABLATIONS = False  # Toggle to enable/disable ablation study (modular flag)\n",
     "\n",
     "RANDOM_SEED = 42\n",
@@ -974,7 +979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
