confusion matrix - WIP

--- a/sanjeev-test/lora-ft-e1.ipynb
+++ b/sanjeev-test/lora-ft-e1.ipynb
@@ -611,7 +611,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Plot confusion matrix\n",
+    "# Plot confusion matrix - @TODO: Integrate into main flow\n",
     "def plot_confusion_matrix(y_true, y_pred, classes=None, title='Confusion matrix', cmap=plt.cm.Blues):\n",
     "    cm = confusion_matrix(y_true, y_pred)\n",
     "    plt.figure(figsize=(6, 5))\n",
@@ -644,7 +644,7 @@
     "    if len(all_tokens) > 10:\n",
     "        all_tokens = all_tokens[:10]\n",
     "\n",
-    "    plot_confusion_matrix(true_tokens, pred_tokens_flat, classes=all_tokens, title='Summarization Token-level Confusion Matrix')\n"
+    "    #plot_confusion_matrix(true_tokens, pred_tokens_flat, classes=all_tokens, title='Summarization Token-level Confusion Matrix')\n"
    ]
   },
   {
