kaggle related changes

--- a/sanjeev-test/lora-ft-e1.ipynb
+++ b/sanjeev-test/lora-ft-e1.ipynb
@@ -7,7 +7,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "############## Working Version. Use Python 3.12.10 ##############\n",
+    "#####################################################################\n",
+    "#Project: Compare low-resource adaptation techniques: \n",
+    "# (prefix-tuning, LoRA, prompt-tuning) on two downstream tasks \n",
+    "# (classification & summarization). \n",
+    "# Report parameter-efficiency vs performance curves.\n",
+    "#####################################################################\n",
+    "\n",
+    "############## Local Working Version. Use Python 3.12.10 ##############\n",
+    "#File Namme: lora_ft_e1.ipynb\n",
     "#Create a venv using python3.12 -m venv .venv\n",
     "#Activate the venv using source .venv/bin/activate\n",
     "#Install dependencies using pip install -r requirements.txt\n",
@@ -17,6 +25,21 @@
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
     "os.environ[\"WANDB_DISABLED\"] = \"true\"\n",
     "\n",
+    "# KAGGLE TOGGLE \n",
+    "IS_KAGGLE = os.environ.get('KAGGLE_KERNEL_RUN_TYPE', None) is not None  # Detect if running on Kaggle\n",
+    "print(f\"Running on Kaggle: {IS_KAGGLE}\")\n",
+    "if IS_KAGGLE:\n",
+    "    os.system('pip install -r /kaggle/input/requirements-txt/requirements.txt')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "20d7c7f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -48,7 +71,10 @@
     "import logging\n",
     "import warnings\n",
     "import json # For saving log_history if needed\n",
-    "\n"
+    "\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "logging.basicConfig(level=logging.INFO)\n",
+    "logger = logging.getLogger(__name__)"
    ]
   },
   {
@@ -66,22 +92,12 @@
     }
    ],
    "source": [
-    "\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "logging.basicConfig(level=logging.INFO)\n",
-    "logger = logging.getLogger(__name__)\n",
-    "\n",
-    "# KAGGLE TOGGLE \n",
-    "IS_KAGGLE = os.environ.get('KAGGLE_KERNEL_RUN_TYPE', None) is not None  # Detect if running on Kaggle\n",
-    "if IS_KAGGLE:\n",
-    "    os.system('pip install transformers==4.57.1 peft==0.17.1 datasets==4.3.0 torch==2.9.0 evaluate==0.4.6 rouge-score==0.1.2 scikit-learn==1.7.2 accelerate==1.11.0 matplotlib==3.10.7 seaborn==0.13.2 wandb==0.22.3 tabulate==0.9.0 --no-deps')\n",
-    "\n",
     "# DEVICE DETECTION \n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\") if IS_KAGGLE else torch.device(\"mps\") if torch.backends.mps.is_available() else torch.device(\"cpu\")\n",
     "print(f\"Using device: {device}\")\n",
     "\n",
     "# CONFIGURATION \n",
-    "MODEL_NAME = \"t5-small\" # Switched from flan-t5-small to avoid config dim bug (num_heads=6 mismatch)\n",
+    "MODEL_NAME = \"t5-small\" # flan-t5-small model is giving issues - config dim bug (num_heads=6 mismatch)\n",
     "SUMMARIZATION_DATASET = \"knkarthick/samsum\"\n",
     "\n",
     "BENCHAMARK_GLUE=\"glue\"\n",
@@ -95,7 +111,10 @@
     "np.random.seed(RANDOM_SEED)\n",
     "\n",
     "NUM_VIRTUAL_TOKENS = 20 # For truncation safety\n",
-    "MAX_POS = 512\n"
+    "MAX_POS = 512\n",
+    "\n",
+    "OUTPUT_DIR = './outputs/lora-ft-e1' if not IS_KAGGLE else '/kaggle/working/outputs/lora-ft-e1'\n",
+    "os.makedirs(OUTPUT_DIR, exist_ok=True)"
    ]
   },
   {
@@ -350,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "973e8594",
    "metadata": {},
    "outputs": [
@@ -484,7 +503,7 @@
     "    return model_inputs\n",
     "\n",
     "# Print 10 samples from each train dataset before preprocessing\n",
-    "print(\"Original Sample Datasets\")\n",
+    "print(\"## Original Sample Datasets ##\")\n",
     "\n",
     "print(\"Classification Train Samples (Before Preprocessing):\")\n",
     "for i in range(10):\n",
@@ -649,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "1da2cd92",
    "metadata": {},
    "outputs": [],
@@ -672,7 +691,7 @@
     "    load_best = method_name == \"full_ft\" or \"lora\" in method_name\n",
     "    \n",
     "    return Seq2SeqTrainingArguments(\n",
-    "        output_dir=f\"./results/{task_name}/{method_name}\",\n",
+    "        output_dir=f\"{OUTPUT_DIR}/results/{task_name}/{method_name}\",\n",
     "        num_train_epochs=epochs,\n",
     "        per_device_train_batch_size=batch,\n",
     "        per_device_eval_batch_size=batch * 2,\n",
@@ -699,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "a23e3a6c",
    "metadata": {},
    "outputs": [
@@ -1425,9 +1444,9 @@
     "}\n",
     "\n",
     "results = {}\n",
-    "os.makedirs(\"./results\", exist_ok=True)\n",
-    "os.makedirs(\"./models\", exist_ok=True)\n",
-    "os.makedirs(\"./plots\", exist_ok=True) \n",
+    "os.makedirs(f\"{OUTPUT_DIR}/results\", exist_ok=True)\n",
+    "os.makedirs(f\"{OUTPUT_DIR}/models\", exist_ok=True)\n",
+    "os.makedirs(f\"{OUTPUT_DIR}/plots\", exist_ok=True) \n",
     "\n",
     "for method_name in methods_to_run:\n",
     "    for task_name, (dataset, compute_metrics) in tasks.items():\n",
@@ -1559,7 +1578,7 @@
     "                \"log_history\": trainer.state.log_history # Collect for plotting\n",
     "            }\n",
     "            \n",
-    "            save_path = f\"./models/{task_name}/{method_name}\"\n",
+    "            save_path = f\"{OUTPUT_DIR}/models/{task_name}/{method_name}\"\n",
     "            os.makedirs(save_path, exist_ok=True)\n",
     "            trainer.save_model(save_path)\n",
     "            print(f\"Completed and saved to {save_path}\\n\")\n",
@@ -1582,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "93ce6bca",
    "metadata": {},
    "outputs": [
@@ -1722,7 +1741,7 @@
     "    df.to_csv(\"peft_results.csv\", index=False)\n",
     "    print(f\"\\nResults saved to 'peft_results.csv'\")\n",
     "    \n",
-    "    with open(\"final_report.md\", \"w\") as f:\n",
+    "    with open(f\"{OUTPUT_DIR}/final_report.md\", \"w\") as f:\n",
     "        f.write(f\"# PEFT Comparison Results - T5-small\\n\\n\")\n",
     "        f.write(f\"## Configuration\\n\")\n",
     "        f.write(f\"- Model: {MODEL_NAME} (switched from flan-t5-small to fix config dim bug)\\n\")\n",
@@ -1741,7 +1760,7 @@
     "            for task_name, plot_path in ablation_plot_paths.items():\n",
     "                f.write(f\"- [{task_name.capitalize()} Ablation Comparison]({plot_path})\\n\")\n",
     "    \n",
-    "    print(\"Report saved to 'final_report.md' (includes plot links)\")\n",
+    "    print(f\"Report saved to '{OUTPUT_DIR}/final_report.md' (includes plot links)\")\n",
     "\n",
     "    # Generate dynamic outcome insights based on results\n",
     "    print(\"\\nOUTCOME INSIGHTS:\")\n",
@@ -1774,7 +1793,7 @@
     "                        impact = \"degradation\" if key_delta < 0 else \"improvement\" if key_delta > 0 else \"no change\"\n",
     "                        print(f\"- Ablation in {method.upper()} on {task.capitalize()} leads to {impact} in performance (delta: {key_delta:.4f}).\")\n",
     "        \n",
-    "        print(f\"View plots in ./plots/ for detailed curves (loss/metric vs step) and comparisons.\")"
+    "        print(f\"View plots in {OUTPUT_DIR}/plots/ for detailed curves (loss/metric vs step) and comparisons.\")"
    ]
   },
   {
