--- a/sanjeev-test/lora-ft-e1.ipynb
+++ b/sanjeev-test/lora-ft-e1.ipynb
@@ -25,11 +25,13 @@
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
     "os.environ[\"WANDB_DISABLED\"] = \"true\"\n",
     "\n",
+    "KAGGLE_REQUIREMENTS_PATH = '/kaggle/input/requirements/requirements-kaggle.txt'\n",
+    "\n",
     "# KAGGLE TOGGLE \n",
     "IS_KAGGLE = os.environ.get('KAGGLE_KERNEL_RUN_TYPE', None) is not None  # Detect if running on Kaggle\n",
     "print(f\"Running on Kaggle: {IS_KAGGLE}\")\n",
     "if IS_KAGGLE:\n",
-    "    os.system('pip install -r /kaggle/input/requirements/requirements.txt')\n",
+    "    os.system(f'pip install -r {KAGGLE_REQUIREMENTS_PATH}')\n",
     "\n"
    ]
   },
