--- a/sanjeev-test/lora-ft-d3-v4.ipynb
+++ b/sanjeev-test/lora-ft-d3-v4.ipynb
@@ -90,11 +90,11 @@
     "BENCHMARK_GLUE=\"glue\"\n",
     "GLUE_DATASET_TASK_SC = \"sst2\"  # SST-2 for sentiment classification\n",
     "\n",
-    "DATASET_SIZE = 'full' # 100 or 500 or 'full' \n",
+    "DATASET_SIZE = 100 # 100 or 500 or 'full' \n",
     "# WARNING: DATASET_SIZE=100 is very small and only good for a 'smoke test'.\n",
     "# The resulting performance will be near random chance and not suitable for a real comparison.\n",
     "# Please set to 'full' or a larger number (e.g., 5000) for a meaningful benchmark.\n",
-    "RUN_ABLATIONS = True  # Toggle to enable/disable ablation study (modular flag)\n",
+    "RUN_ABLATIONS = False  # Toggle to enable/disable ablation study (modular flag)\n",
     "\n",
     "RANDOM_SEED = 42\n",
     "torch.manual_seed(RANDOM_SEED)\n",
@@ -103,7 +103,7 @@
     "NUM_VIRTUAL_TOKENS = 50 # CHANGE: Increased from 20 to 50 for better adaptation in prefix/prompt - Why: Longer tokens allow stronger task-specific tuning, fixing weak/flat metrics in prefix/prompt\n",
     "MAX_POS = 512\n",
     "\n",
-    "OUTPUT_DIR = './outputs/lora-ft-d3-v4' if not IS_KAGGLE else '/kaggle/working/outputs/lora-ft-d3-v4'\n",
+    "OUTPUT_DIR = './outputs/tmp2-lora-ft-d3-v4' if not IS_KAGGLE else '/kaggle/working/outputs/tmp2-lora-ft-d3-v4'\n",
     "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
     "\n",
     "# In[4]:\n",
@@ -581,8 +581,8 @@
     "        #label_smoothing_factor=0.1,\n",
     "        # CHANGE: Set optim to 'adamw_torch' - Why: More robust for PEFT, fixing instability in ablations/Full FT\n",
     "        optim='adamw_torch',\n",
-    "        # CHANGE: Added gradient_checkpointing=True - Why: Saves memory and stabilizes full FT/large models, fixing OOM/oscillation\n",
-    "        gradient_checkpointing=True\n",
+    "        # CHANGE: Set gradient_checkpointing=False - Why: Avoids grad flow issues in PEFT/T5, fixing \"no grad_fn\" error; trade memory for stability\n",
+    "        gradient_checkpointing=False\n",
     "    )\n",
     "\n",
     "# In[13]:\n",
@@ -624,8 +624,7 @@
     "                total_layers = model.config.num_layers + model.config.num_decoder_layers\n",
     "                peft_configs_local = {\n",
     "                    \"lora\": LoraConfig(\n",
-    "                        # CHANGE: Increased r=32 from 16 for LoRA - Why: Higher rank for better capacity, boosting low metrics\n",
-    "                        r=32,\n",
+    "                        r=32,  # CHANGE: Increased r=32 from 16 for LoRA - Why: Higher rank for better capacity, boosting low metrics\n",
     "                        lora_alpha=32,\n",
     "                        target_modules=[\"q\", \"v\"],\n",
     "                        lora_dropout=0.05,\n",
@@ -711,7 +710,7 @@
     "            print(\"Evaluating...\")\n",
     "            test_dataset = dataset.get(\"test\", dataset[\"validation\"])\n",
     "            gen_kwargs = {\n",
-    "                # CHANGE: For classification, max_length=5; summ=128; num_beams=6 - Why: Short for classification enforces concise labels (fixes verbose outputs/low acc); more beams improves quality (fixes poor ROUGE)\n",
+    "                # CHANGE: For classification, max_length=5; summ=128; num_beams=6 - Why: Short for classification enforces concise labels (fixes verbose outputs/low acc); more beams improves quality (fixes poor ROUGE\n",
     "                \"max_length\": 5 if task_name == \"classification\" else 128,\n",
     "                \"num_beams\": 6,\n",
     "                \"early_stopping\": True,\n",
