--- a/sanjeev-test/ift-lora-d3-v1.ipynb
+++ b/sanjeev-test/ift-lora-d3-v1.ipynb
@@ -103,7 +103,7 @@
     "NUM_VIRTUAL_TOKENS = 50 # CHANGE: Increased from 20 to 50 for better adaptation in prefix/prompt - Why: Longer tokens allow stronger task-specific tuning, fixing weak/flat metrics in prefix/prompt\n",
     "MAX_POS = 512\n",
     "\n",
-    "OUTPUT_DIR = './outputs/ift-lora-d3-v1' if not IS_KAGGLE else '/kaggle/working/outputs/ift-lora-d3-v1'\n",
+    "OUTPUT_DIR = './outputs/lora-ft-d3-v3' if not IS_KAGGLE else '/kaggle/working/outputs/lora-ft-d3-v3'\n",
     "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
     "\n",
     "# In[4]:\n",
@@ -723,9 +723,9 @@
     "            # CHANGE: Added trainer.predict for sample logging post-eval - Why: Debugs generations, fixing empty/low metrics\n",
     "            predictions = trainer.predict(dataset[\"validation\"])\n",
     "            # CHANGE: Clean predictions before decoding - Why: Handles -100/invalid IDs, fixing OverflowError in batch_decode\n",
-    "            predictions.predictions = np.where(predictions.predictions != -100, predictions.predictions, tokenizer.pad_token_id)\n",
-    "            predictions.predictions = np.clip(predictions.predictions, 0, tokenizer.vocab_size - 1)\n",
-    "            logger.info(f\"Sample generations: {tokenizer.batch_decode(predictions.predictions[:5], skip_special_tokens=True)}\")\n",
+    "            cleaned_predictions = np.where(predictions.predictions != -100, predictions.predictions, tokenizer.pad_token_id)\n",
+    "            cleaned_predictions = np.clip(cleaned_predictions, 0, tokenizer.vocab_size - 1)\n",
+    "            logger.info(f\"Sample generations: {tokenizer.batch_decode(cleaned_predictions[:5], skip_special_tokens=True)}\")\n",
     "            exp_name = f\"{method_name}_{task_name}\"\n",
     "            trainable = model.num_parameters(only_trainable=True) if hasattr(model, 'num_parameters') else sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
     "            total = model.num_parameters() if hasattr(model, 'num_parameters') else sum(p.numel() for p in model.parameters())\n",
