--- a/sanjeev-test/ift-lora-d3-v1.ipynb
+++ b/sanjeev-test/ift-lora-d3-v1.ipynb
@@ -103,7 +103,7 @@
     "NUM_VIRTUAL_TOKENS = 50 # CHANGE: Increased from 20 to 50 for better adaptation in prefix/prompt - Why: Longer tokens allow stronger task-specific tuning, fixing weak/flat metrics in prefix/prompt\n",
     "MAX_POS = 512\n",
     "\n",
-    "OUTPUT_DIR = './outputs/lora-ft-d3-v3' if not IS_KAGGLE else '/kaggle/working/outputs/lora-ft-d3-v3'\n",
+    "OUTPUT_DIR = './outputs/ift-lora-d3-v3' if not IS_KAGGLE else '/kaggle/working/outputs/ift-lora-d3-v3'\n",
     "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
     "\n",
     "# In[4]:\n",
