--- a/sanjeev-test/ift-prompt-ab-v1.ipynb
+++ b/sanjeev-test/ift-prompt-ab-v1.ipynb
@@ -3,19 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f76a7aed",
+   "id": "a8c67832",
    "metadata": {},
    "outputs": [],
    "source": [
     "#####################################################################\n",
     "#Project: Compare low-resource adaptation techniques: \n",
-    "# (prefix-tuning, LoRA, prompt-tuning) on two downstream tasks \n",
+    "# (prompt-tuning) on two downstream tasks \n",
     "# (classification & summarization). \n",
     "# Report parameter-efficiency vs performance curves.\n",
     "#####################################################################\n",
     "\n",
     "############## Local Working Version. Use Python 3.12.10 ##############\n",
-    "#File Namme: lora_ft_e1.ipynb\n",
+    "#File Name: prompt_only.ipynb\n",
     "#Create a venv using python3.12 -m venv .venv\n",
     "#Activate the venv using source .venv/bin/activate\n",
     "#Install dependencies using pip install -r requirements.txt\n",
@@ -64,8 +64,6 @@
     "\n",
     "from peft import (\n",
     "    get_peft_model,\n",
-    "    LoraConfig,\n",
-    "    PrefixTuningConfig,\n",
     "    PromptTuningConfig,\n",
     "    TaskType,\n",
     "    PeftModel\n",
@@ -90,7 +88,7 @@
     "BENCHMARK_GLUE=\"glue\"\n",
     "GLUE_DATASET_TASK_SC = \"sst2\"  # SST-2 for sentiment classification\n",
     "\n",
-    "DATASET_SIZE = 'full' # 100 or 500 or 'full' \n",
+    "DATASET_SIZE = 5000 # 100 or 500 or 'full' \n",
     "# WARNING: DATASET_SIZE=100 is very small and only good for a 'smoke test'.\n",
     "# The resulting performance will be near random chance and not suitable for a real comparison.\n",
     "# Please set to 'full' or a larger number (e.g., 5000) for a meaningful benchmark.\n",
@@ -103,19 +101,19 @@
     "NUM_VIRTUAL_TOKENS = 50 # CHANGE: Increased from 20 to 50 for better adaptation in prefix/prompt - Why: Longer tokens allow stronger task-specific tuning, fixing weak/flat metrics in prefix/prompt\n",
     "MAX_POS = 512\n",
     "\n",
-    "OUTPUT_DIR = './outputs/ift-lora-d3-v3' if not IS_KAGGLE else '/kaggle/working/outputs/ift-lora-d3-v3'\n",
+    "OUTPUT_DIR = './outputs/ift-prompt-ab-v1' if not IS_KAGGLE else '/kaggle/working/outputs/ift-prompt-ab-v1'\n",
     "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
     "\n",
     "# In[4]:\n",
     "print(\"=\"*60)\n",
-    "print(\"PEFT COMPARISON - T5-small\")\n",
+    "print(\"Prompt-Tuning COMPARISON - T5-small\")\n",
     "print(\"=\"*60)\n",
     "print(f\"Dataset size: {DATASET_SIZE}\")\n",
     "print(f\"Model: {MODEL_NAME}\")\n",
-    "print(\"Methods: LoRA, Prefix-Tuning, Prompt-Tuning, Full FT\")\n",
+    "print(\"Methods: Prompt-Tuning\")\n",
     "if RUN_ABLATIONS:\n",
     "    print(\"Ablations Enabled: Including ablated variants for study\")\n",
-    "    print(\"Note: For LoRA ablation, using lora_alpha=0 to nullify adapter effect\")\n",
+    "    print(\"Note: For prompt ablation, using shorter virtual tokens\")\n",
     "print(\"=\"*60)\n",
     "print()\n",
     "\n",
@@ -361,8 +359,8 @@
     "    print(f\"\\n--- Example {i+1} ---\")\n",
     "    print(f\"INPUT  : {decoded['input_text']}\")\n",
     "    print(f\"LABEL  : {decoded['label_text']}\")\n",
-    "    # print(f\"input_ids  (first 30) : {decoded['input_ids_preview']}\")\n",
-    "    # print(f\"label_ids  (first 15) : {decoded['label_ids_preview']}\")\n",
+    "    print(f\"input_ids  (first 30) : {decoded['input_ids_preview']}\")\n",
+    "    print(f\"label_ids  (first 15) : {decoded['label_ids_preview']}\")\n",
     "\n",
     "# Print summarisation samples\n",
     "print(\"\\n=== Summarisation – post-preprocessing (5 examples) ===\")\n",
@@ -371,8 +369,8 @@
     "    print(f\"\\n--- Example {i+1} ---\")\n",
     "    print(f\"INPUT  : {decoded['input_text']}\")\n",
     "    print(f\"SUMMARY: {decoded['label_text']}\")\n",
-    "    # print(f\"input_ids  (first 30) : {decoded['input_ids_preview']}\")\n",
-    "    # print(f\"label_ids  (first 15) : {decoded['label_ids_preview']}\")\n",
+    "    print(f\"input_ids  (first 30) : {decoded['input_ids_preview']}\")\n",
+    "    print(f\"label_ids  (first 15) : {decoded['label_ids_preview']}\")\n",
     "\n",
     "print(\"\\nPreprocessing complete\\n\")\n",
     "\n",
@@ -515,7 +513,7 @@
     "# In[12]:\n",
     "# TRAINING ARGS \n",
     "def get_training_args(method_name, task_name):\n",
-    "    is_peft = method_name in [\"lora\", \"prefix\", \"prompt\"] or \"_ablated_\" in method_name\n",
+    "    is_peft = method_name in [\"prompt\"] or \"_ablated_\" in method_name\n",
     "    # CHANGE: Lowered LR for PEFT/ablation to 3e-4, Full FT to 1e-5 - Why: High LR caused instability/overfitting/decreasing metrics; matches t5-small recommendations\n",
     "    lr = 3e-4 if is_peft else 1e-5\n",
     "    \n",
@@ -548,7 +546,7 @@
     "    use_bf16 = torch.cuda.is_available() and torch.cuda.is_bf16_supported()\n",
     "    # CHANGE: Set fp16=True if not bf16 - Why: Faster training/mixed precision, fixing slow runs/low metrics if GPU supports\n",
     "    use_fp16 = not use_bf16 and torch.cuda.is_available()  # Enable fp16 on CUDA if bf16 unavailable\n",
-    "    load_best = method_name == \"full_ft\" or \"lora\" in method_name\n",
+    "    load_best = \"prompt\" in method_name\n",
     "    \n",
     "    return Seq2SeqTrainingArguments(\n",
     "        output_dir=f\"{OUTPUT_DIR}/results/{task_name}/{method_name}\",\n",
@@ -587,9 +585,9 @@
     "\n",
     "# In[13]:\n",
     "# MAIN TRAINING LOOP \n",
-    "base_methods = [\"lora\", \"prefix\", \"prompt\", \"full_ft\"]\n",
-    "ablation_methods = [\"lora_ablated_alpha0\", \"prefix_ablated_no_proj\", \"prompt_ablated_short\"]\n",
-    "methods_to_run = base_methods + (ablation_methods if RUN_ABLATIONS else [])\n",
+    "base_methods = [\"prompt\"]\n",
+    "ablation_methods = [\"prompt_ablated_short\"] if RUN_ABLATIONS else []\n",
+    "methods_to_run = base_methods + ablation_methods\n",
     "tasks = {\n",
     "    \"classification\": (tokenized_classification, compute_classification_metrics),\n",
     "    \"summarization\": (tokenized_summarization, compute_summarization_metrics)\n",
@@ -618,66 +616,23 @@
     "            \n",
     "            # Note: t5-small has correct dims (num_heads=8, head_dim=64); PEFT handles DynamicCache natively.\n",
     "            # Create PEFT configs dynamically from model.config\n",
-    "            if method_name != \"full_ft\":\n",
-    "                d_model = model.config.d_model\n",
-    "                num_heads = model.config.num_heads\n",
-    "                total_layers = model.config.num_layers + model.config.num_decoder_layers\n",
-    "                peft_configs_local = {\n",
-    "                    \"lora\": LoraConfig(\n",
-    "                        r=32,  # CHANGE: Increased r=32 from 16 for LoRA - Why: Higher rank for better capacity, boosting low metrics\n",
-    "                        lora_alpha=32,\n",
-    "                        target_modules=[\"q\", \"v\"],\n",
-    "                        lora_dropout=0.05,\n",
-    "                        bias=\"none\",\n",
-    "                        task_type=TaskType.SEQ_2_SEQ_LM\n",
-    "                    ),\n",
-    "                    \"lora_ablated_alpha0\": LoraConfig(\n",
-    "                        r=32,  # Match baseline r\n",
-    "                        lora_alpha=0,  # Ablation: zero scaling, no effect from adapter\n",
-    "                        target_modules=[\"q\", \"v\"],\n",
-    "                        lora_dropout=0.05,\n",
-    "                        bias=\"none\",\n",
-    "                        task_type=TaskType.SEQ_2_SEQ_LM\n",
-    "                    ),\n",
-    "                    \"prefix\": PrefixTuningConfig(\n",
-    "                        task_type=TaskType.SEQ_2_SEQ_LM,\n",
-    "                        inference_mode=False,\n",
-    "                        num_virtual_tokens=NUM_VIRTUAL_TOKENS,\n",
-    "                        token_dim=d_model,\n",
-    "                        num_transformer_submodules=2,\n",
-    "                        num_attention_heads=num_heads,\n",
-    "                        num_layers=total_layers,\n",
-    "                        encoder_hidden_size=d_model,\n",
-    "                        prefix_projection=True  # Baseline with projection\n",
-    "                    ),\n",
-    "                    \"prefix_ablated_no_proj\": PrefixTuningConfig(  # Ablation: Remove projection layer\n",
-    "                        task_type=TaskType.SEQ_2_SEQ_LM,\n",
-    "                        inference_mode=False,\n",
-    "                        num_virtual_tokens=NUM_VIRTUAL_TOKENS,\n",
-    "                        token_dim=d_model,\n",
-    "                        num_transformer_submodules=2,\n",
-    "                        num_attention_heads=num_heads,\n",
-    "                        num_layers=total_layers,\n",
-    "                        encoder_hidden_size=d_model,\n",
-    "                        prefix_projection=False  # Ablated\n",
-    "                    ),\n",
-    "                    \"prompt\": PromptTuningConfig(\n",
-    "                        num_virtual_tokens=NUM_VIRTUAL_TOKENS,\n",
-    "                        task_type=TaskType.SEQ_2_SEQ_LM,\n",
-    "                        prompt_tuning_init=\"RANDOM\"\n",
-    "                    ),\n",
-    "                    \"prompt_ablated_short\": PromptTuningConfig(  # Ablation: Fewer tokens (e.g., half)\n",
-    "                        num_virtual_tokens=NUM_VIRTUAL_TOKENS // 2,\n",
-    "                        task_type=TaskType.SEQ_2_SEQ_LM,\n",
-    "                        prompt_tuning_init=\"RANDOM\"\n",
-    "                    )\n",
-    "                }\n",
-    "                model = get_peft_model(model, peft_configs_local[method_name])\n",
-    "                model.print_trainable_parameters()\n",
-    "            else:\n",
-    "                trainable = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
-    "                total = sum(p.numel() for p in model.parameters())\n",
-    "                print(f\"trainable params: {trainable:,} || all params: {total:,} || trainable%: 100.00\")\n",
+    "            d_model = model.config.d_model\n",
+    "            num_heads = model.config.num_heads\n",
+    "            total_layers = model.config.num_layers + model.config.num_decoder_layers\n",
+    "            peft_configs_local = {\n",
+    "                \"prompt\": PromptTuningConfig(\n",
+    "                    num_virtual_tokens=NUM_VIRTUAL_TOKENS,\n",
+    "                    task_type=TaskType.SEQ_2_SEQ_LM,\n",
+    "                    prompt_tuning_init=\"RANDOM\"\n",
+    "                ),\n",
+    "                \"prompt_ablated_short\": PromptTuningConfig(  # Ablation: Fewer tokens (e.g., half)\n",
+    "                    num_virtual_tokens=NUM_VIRTUAL_TOKENS // 2,\n",
+    "                    task_type=TaskType.SEQ_2_SEQ_LM,\n",
+    "                    prompt_tuning_init=\"RANDOM\"\n",
+    "                )\n",
+    "            }\n",
+    "            model = get_peft_model(model, peft_configs_local[method_name])\n",
+    "            model.print_trainable_parameters()\n",
     "            \n",
     "            training_args = get_training_args(method_name, task_name)\n",
     "            data_collator = DataCollatorForSeq2Seq(tokenizer, model=model, padding=True)\n",
@@ -832,22 +787,22 @@
     "    metric_cols = [c for c in df.columns if c.startswith(\"eval_\")]\n",
     "    cols.extend(sorted(metric_cols))\n",
     "    df = df[cols]\n",
-    "    df.to_csv(f\"{OUTPUT_DIR}/peft_results.csv\", index=False)\n",
-    "    print(f\"\\nResults saved to '{OUTPUT_DIR}/peft_results.csv'\")\n",
+    "    df.to_csv(f\"{OUTPUT_DIR}/prompt_results.csv\", index=False)\n",
+    "    print(f\"\\nResults saved to '{OUTPUT_DIR}/prompt_results.csv'\")\n",
     "    \n",
     "    # --- Final Report --- \n",
     "    # Use relative paths for plots in the markdown report\n",
-    "    report_path = f\"{OUTPUT_DIR}/final_report.md\"\n",
+    "    report_path = f\"{OUTPUT_DIR}/prompt_final_report.md\"\n",
     "    report_dir = os.path.dirname(report_path)\n",
     "\n",
     "    with open(report_path, \"w\") as f:\n",
-    "        f.write(f\"# PEFT Comparison Results - T5-small\\n\\n\")\n",
+    "        f.write(f\"# Prompt-Tuning Adaptation Results - T5-small\\n\\n\")\n",
     "        f.write(f\"## Configuration\\n\")\n",
     "        f.write(f\"- Model: {MODEL_NAME} (switched from flan-t5-small to fix config dim bug)\\n\")\n",
     "        f.write(f\"- Dataset Size: {DATASET_SIZE}\\n\")\n",
-    "        f.write(f\"- Methods: LoRA, Prefix-Tuning, Prompt-Tuning, Full Fine-Tuning\\n\")\n",
+    "        f.write(f\"- Methods: Prompt-Tuning\\n\")\n",
     "        if RUN_ABLATIONS:\n",
-    "            f.write(f\"- Ablations: Enabled (including ablated variants); LoRA ablation uses lora_alpha=0 for no adaptation effect\\n\")\n",
+    "            f.write(f\"- Ablations: Enabled (including ablated variants); prompt ablation uses shorter virtual tokens\\n\")\n",
     "        f.write(f\"- Special: Native DynamicCache support; correct dims (num_heads=8, head_dim=64)\\n\\n\")\n",
     "        f.write(f\"## Summary Table\\n\\n\")\n",
     "        f.write(df.to_markdown(index=False))\n",
@@ -902,14 +857,20 @@
     "\n",
     "# In[15]:\n",
     "print(\"\\n\" + \"=\"*60)\n",
-    "print(\"SUCCESS - All 4 PEFT methods completed!\" + (\" With ablations!\" if RUN_ABLATIONS else \"\"))\n",
+    "print(\"SUCCESS - Prompt-Tuning method completed!\" + (\" With ablations!\" if RUN_ABLATIONS else \"\"))\n",
     "print(\"=\"*60)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
