--- a/harsh-test/Prompt Tuning 1.ipynb
+++ b/harsh-test/Prompt Tuning 1.ipynb
@@ -46,7 +46,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Harsh\\Programs\\python_envs\\dl-virtualenv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\Harsh\\Programs\\python_envs\\dl-virtualenv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "d111690d-42ed-42c3-a242-010d0eeb0335",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
     "BENCHAMARK_GLUE = \"glue\"\n",
     "GLUE_DATASET_TASK_SC = \"sst2\"  # SST-2 for sentiment classification\n",
     "\n",
-    "DATASET_SIZE = 100  # or 'full'\n",
+    "DATASET_SIZE = 'full'  # or 'full'\n",
     "RUN_ABLATIONS = False  # Toggle to enable/disable ablation study (modular flag)\n",
     "\n",
     "RANDOM_SEED = 42\n",
@@ -186,17 +186,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "50308b47-4277-484e-b967-1a68d17cc44a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'cuda'"
+       "device(type='cuda')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "fe33585b-9950-433c-95ff-574f36f29b5a",
    "metadata": {},
    "outputs": [],
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "e50efe94-a23e-47ba-a70d-3f80742d202d",
    "metadata": {},
    "outputs": [],
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "aea679ac-ef63-41f2-8676-896dd0bed101",
    "metadata": {},
    "outputs": [],
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "60059afe-8a27-4b10-a154-29f5531ab4df",
    "metadata": {},
    "outputs": [],
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "97e8ce40-be65-40c6-bfff-328793757495",
    "metadata": {},
    "outputs": [],
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "f1ed6cd6-c58a-4299-8be6-4bdadb5f60c2",
    "metadata": {},
    "outputs": [],
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "181fdc6a-ccaa-4d5e-8eaa-236fc9166152",
    "metadata": {},
    "outputs": [],
@@ -854,37 +854,45 @@
     "    task=\"sst2\",\n",
     "    method=\"prompt_tuning\",\n",
     "    model_name=MODEL_NAME,\n",
-    "    epochs=1,\n",
-    "    batch_size=4,\n",
-    "    train_size=200,\n",
-    "    eval_size=200,\n",
+    "    epochs=5,\n",
+    "    batch_size=8,\n",
+    "    train_size=DATASET_SIZE,\n",
+    "    eval_size=DATASET_SIZE,\n",
     ")\n",
     "\n",
     "cfg_sam_small = RunConfig(\n",
     "    task=\"samsum\",\n",
     "    method=\"prompt_tuning\",\n",
     "    model_name=MODEL_NAME,\n",
-    "    epochs=1,\n",
-    "    batch_size=2,\n",
-    "    train_size=300,\n",
-    "    eval_size=150,\n",
+    "    epochs=5,\n",
+    "    batch_size=8,\n",
+    "    train_size=DATASET_SIZE,\n",
+    "    eval_size=DATASET_SIZE,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "4bca358e-d4b1-4d1c-b4f7-2c318b90b240",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 67349/67349 [00:09<00:00, 6991.63 examples/s]\n",
+      "Map: 100%|██████████| 872/872 [00:00<00:00, 5824.99 examples/s]\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='50' max='50' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [50/50 00:07, Epoch 1/1]\n",
+       "      <progress value='42095' max='42095' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [42095/42095 1:17:37, Epoch 5/5]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -897,8 +905,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>8.935600</td>\n",
-       "      <td>8.941769</td>\n",
+       "      <td>1.947800</td>\n",
+       "      <td>0.571611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1.269200</td>\n",
+       "      <td>0.358719</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>1.159600</td>\n",
+       "      <td>0.253496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>0.991100</td>\n",
+       "      <td>0.183593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>1.031100</td>\n",
+       "      <td>0.164494</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -924,7 +952,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'task': 'sst2', 'method': 'prompt_tuning', 'model_name': 't5-small', 'seed': 42, 'device': 'cuda', 'trainable_params': 20480, 'total_params': 60527104, 'trainable_readable': '20.5K', 'total_readable': '60.53M', 'train_time_sec': 8.156376838684082, 'peak_gpu_mem_bytes': 625603584, 'peak_gpu_mem_gb': 0.5826387405395508, 'accuracy': 0.505, 'precision': 0.5, 'recall': 0.010101010101010102, 'f1': 0.019801980198019802}\n"
+      "{'task': 'sst2', 'method': 'prompt_tuning', 'model_name': 't5-small', 'seed': 42, 'device': 'cuda', 'trainable_params': 20480, 'total_params': 60527104, 'trainable_readable': '20.5K', 'total_readable': '60.53M', 'train_time_sec': 4659.218475818634, 'peak_gpu_mem_bytes': 866616832, 'peak_gpu_mem_gb': 0.8070998191833496, 'accuracy': 0.4908256880733945, 'precision': 0.0, 'recall': 0.0, 'f1': 0.0}\n"
      ]
     }
    ],
@@ -934,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "dfe61131-ddee-497c-9e17-634b5b182a35",
    "metadata": {},
    "outputs": [
@@ -950,16 +978,16 @@
        " 'total_params': 60527104,\n",
        " 'trainable_readable': '20.5K',\n",
        " 'total_readable': '60.53M',\n",
-       " 'train_time_sec': 7.890331029891968,\n",
-       " 'peak_gpu_mem_bytes': 625603584,\n",
-       " 'peak_gpu_mem_gb': 0.5826387405395508,\n",
-       " 'accuracy': 0.505,\n",
-       " 'precision': 0.5,\n",
-       " 'recall': 0.010101010101010102,\n",
-       " 'f1': 0.019801980198019802}"
+       " 'train_time_sec': 4659.218475818634,\n",
+       " 'peak_gpu_mem_bytes': 866616832,\n",
+       " 'peak_gpu_mem_gb': 0.8070998191833496,\n",
+       " 'accuracy': 0.4908256880733945,\n",
+       " 'precision': 0.0,\n",
+       " 'recall': 0.0,\n",
+       " 'f1': 0.0}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,18 +998,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "7c094ced-6201-4b7c-999e-d31f95acfc85",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Map: 100%|██████████| 14731/14731 [00:09<00:00, 1487.02 examples/s]\n",
+      "Map: 100%|██████████| 818/818 [00:00<00:00, 924.64 examples/s]\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
        "\n",
        "    <div>\n",
        "      \n",
-       "      <progress value='150' max='150' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [150/150 00:22, Epoch 1/1]\n",
+       "      <progress value='5059' max='9210' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [5059/9210 33:46 < 27:43, 2.50 it/s, Epoch 2.75/5]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -994,8 +1030,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>10.202700</td>\n",
-       "      <td>10.262512</td>\n",
+       "      <td>1.914600</td>\n",
+       "      <td>0.886336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>1.549600</td>\n",
+       "      <td>0.877559</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -1008,28 +1049,17 @@
      "output_type": "display_data"
     },
     {
-     "data": {
-      "text/html": [],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading builder script: 9.01kB [00:00, 11.6MB/s]\n",
-      "INFO:absl:Using default tokenizer.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'task': 'samsum', 'method': 'prompt_tuning', 'model_name': 't5-small', 'seed': 42, 'device': 'cuda', 'trainable_params': 20480, 'total_params': 60527104, 'trainable_readable': '20.5K', 'total_readable': '60.53M', 'train_time_sec': 22.649914503097534, 'peak_gpu_mem_bytes': 1170922496, 'peak_gpu_mem_gb': 1.0905065536499023, 'rouge1': 0.22083272297691126, 'rouge2': 0.059536736813944266, 'rougeL': 0.17904337426416925, 'rougeLsum': 0.17947146566825567, 'sacrebleu': 3.0869136510935795, 'chrf': 24.462919290879864, 'avg_gen_len': 29.66, 'avg_ref_len': 18.85333333333333, 'length_ratio': 1.885101697254776}\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m res_sum = \u001b[43mtrain_and_eval\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcfg_sam_small\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 126\u001b[39m, in \u001b[36mtrain_and_eval\u001b[39m\u001b[34m(cfg)\u001b[39m\n\u001b[32m    124\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m torch.cuda.is_available():\n\u001b[32m    125\u001b[39m     torch.cuda.reset_peak_memory_stats()\n\u001b[32m--> \u001b[39m\u001b[32m126\u001b[39m \u001b[43mtrainer\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    127\u001b[39m elapsed = time.time() - start\n\u001b[32m    128\u001b[39m stats[\u001b[33m\"\u001b[39m\u001b[33mtrain_time_sec\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[38;5;28mfloat\u001b[39m(elapsed)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Harsh\\Programs\\python_envs\\dl-virtualenv\\Lib\\site-packages\\transformers\\trainer.py:2325\u001b[39m, in \u001b[36mTrainer.train\u001b[39m\u001b[34m(self, resume_from_checkpoint, trial, ignore_keys_for_eval, **kwargs)\u001b[39m\n\u001b[32m   2323\u001b[39m         hf_hub_utils.enable_progress_bars()\n\u001b[32m   2324\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m2325\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43minner_training_loop\u001b[49m\u001b[43m(\u001b[49m\n\u001b[32m   2326\u001b[39m \u001b[43m        \u001b[49m\u001b[43margs\u001b[49m\u001b[43m=\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   2327\u001b[39m \u001b[43m        \u001b[49m\u001b[43mresume_from_checkpoint\u001b[49m\u001b[43m=\u001b[49m\u001b[43mresume_from_checkpoint\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   2328\u001b[39m \u001b[43m        \u001b[49m\u001b[43mtrial\u001b[49m\u001b[43m=\u001b[49m\u001b[43mtrial\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   2329\u001b[39m \u001b[43m        \u001b[49m\u001b[43mignore_keys_for_eval\u001b[49m\u001b[43m=\u001b[49m\u001b[43mignore_keys_for_eval\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m   2330\u001b[39m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Harsh\\Programs\\python_envs\\dl-virtualenv\\Lib\\site-packages\\transformers\\trainer.py:2679\u001b[39m, in \u001b[36mTrainer._inner_training_loop\u001b[39m\u001b[34m(self, batch_size, args, resume_from_checkpoint, trial, ignore_keys_for_eval)\u001b[39m\n\u001b[32m   2673\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m context():\n\u001b[32m   2674\u001b[39m     tr_loss_step = \u001b[38;5;28mself\u001b[39m.training_step(model, inputs, num_items_in_batch)\n\u001b[32m   2676\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[32m   2677\u001b[39m     args.logging_nan_inf_filter\n\u001b[32m   2678\u001b[39m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_torch_xla_available()\n\u001b[32m-> \u001b[39m\u001b[32m2679\u001b[39m     \u001b[38;5;129;01mand\u001b[39;00m (torch.isnan(tr_loss_step) \u001b[38;5;129;01mor\u001b[39;00m \u001b[43mtorch\u001b[49m\u001b[43m.\u001b[49m\u001b[43misinf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtr_loss_step\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[32m   2680\u001b[39m ):\n\u001b[32m   2681\u001b[39m     \u001b[38;5;66;03m# if loss is nan or inf simply add the average of previous logged losses\u001b[39;00m\n\u001b[32m   2682\u001b[39m     tr_loss = tr_loss + tr_loss / (\u001b[32m1\u001b[39m + \u001b[38;5;28mself\u001b[39m.state.global_step - \u001b[38;5;28mself\u001b[39m._globalstep_last_logged)\n\u001b[32m   2683\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[31mKeyboardInterrupt\u001b[39m: "
      ]
     }
    ],
