--- a/sanjeev-test/ift-lora-v1.ipynb
+++ b/sanjeev-test/ift-lora-v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "172e90dc",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
     "#####################################################################\n",
     "\n",
     "############## Local Working Version. Use Python 3.12.10 ##############\n",
-    "#File Name: lora_only.ipynb\n",
+    "#File Name: ift-lora_v1.ipynb\n",
     "#Create a venv using python3.12 -m venv .venv\n",
     "#Activate the venv using source .venv/bin/activate\n",
     "#Install dependencies using pip install -r requirements.txt\n",
